// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`во время обработки панорамы покажет правильный текст для внешней панорамы 1`] = `
<div
  className="PanoramaUploadBlock__noticeText"
>
  Панорама будет обработана и добавлена к объявлению в течение часа
</div>
`;

exports[`во время обработки панорамы покажет правильный текст для внутренней панорамы 1`] = `
<div
  className="PanoramaUploadBlock__noticeText"
>
  Панорама будет обработана и добавлена к объявлению в течение нескольких минут
</div>
`;
